# sidetrek

./: .gitignore  README.md  bun.lockb  docker-compose.yaml  index.ts  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: report_issue_template.yml
.github/workflows/: create-github-release.yml
bun-server/: README.md  bun.lockb  constants.ts  index.ts  package.json  utils.ts
demo/: demo.cast
src/: README.md  docker-compose.yaml  sidetrek.yaml
src/cli/: constants.ts  index.ts  toolConfigs.ts  types.ts  utils.test.ts  utils.ts  validators.ts
src/cli/commands/: dev.ts  down.ts  init.ts  logs.ts  start.ts  stop.ts  utils.ts  validators.ts
src/cli/commands/init/: init.ts
src/cli/commands/notebook/: export.ts  new.ts
src/cli/commands/run/: dagster.ts  dbt.ts  meltano.ts  trino.ts
src/cli/commands/stacks/: dagsterIcebergTrinoStack.ts
src/cli/templates/: Dockerfile  gitignore.ts  jupyterlabDockerfile.ts
src/cli/templates/dagster-dbt/: __init__.py  __init__.ts  dbt_assets.py  (+1 more)
src/scripts/: build.ts  dev.ts  install.sh  release.ts
src/types/: global.d.ts
temp/: dbt_project.yml
test_proj/: docker-compose.yaml  pyproject.toml
test_proj/dagster/test_proj/: .gitignore  README.md  meltano.py  pyproject.toml  setup.cfg  setup.py
test_proj/dbt/test_proj/: dbt_project.yml  profiles.yml
test_proj/meltano/: .gitignore  meltano.yml
test_proj/trino/etc/: config.properties  jvm.config  node.properties
test_proj/trino/etc/catalog/: iceberg.properties
ui/: bun.lockb  package.json  tailwind.config.js  tsconfig.json
ui/src/: App.tsx  index.css  main.tsx
(+25 files in other folders)
