[tool.poetry]
name = "test-proj"
version = "0.1.0"
description = ""
authors = ["Seungchan Lee <seunggs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10.0"
dagster = "^1.6.3"
dagster-webserver = "^1.6.3"
meltano = "2.19.1"
dbt-core = "^1.7.13"
dbt-trino = "^1.7.1"
dagster-meltano = "^1.5.3"
dagster-dbt = "^0.22.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
